<resources>
    <string name="app_name">SpeakLoudUdacity</string>

    <!-- Toolbar -->
    <string name="title_activity_settings">Settings</string>
    <string name="action_settings">Settings</string>
    <string name="action_recordings">Saved Records</string>

    <!-- MainView -->

    <string name="go_to_record_screen_button">Go to record screen button</string>
    <string name="go_to_saved_records_button">Go to saved records button</string>
    <string name="go_to_settings_button">Go to settings button</string>

    <!-- Recording View -->

    <string name="title_activity_recording">Record audio</string>


    <!-- ConfirmationDialog Dialog -->
    <string name="confirmation_maessage">Recording was saved</string>

    <!-- Preferences Keys-->
    <string name="pref_nfc_key">pref_nfc</string>
    <string name="pref_about_key">pref_about</string>
    <string name="pref_app_theme_key">pref_app_theme</string>
    <string name="pref_about_summary">tap to get more info</string>

    <!-- Preferences -->
    <string name="pref_about_title">About</string>
    <string name="pref_app_version">version</string>
    <string name="pref_app_theme">App theme</string>
    <string name="pref_nfc_enabled">NFC enabled</string>

    <!-- About Alert -->
    <string name="about_alert_title">About</string>
    <string name="about_alert_message">\nMIT License\n\nCopyright &#169; 2018 Grzegorz Kwasniewski\n\nContact:\ncontact@grzegorzkwasniewski.com\n\nversion 1.0</string>

    <!-- Audio Files View -->
    <string name="title_activity_audio_files">Audio Files</string>
    <string name="file_share_dialog">Share file</string>
    <string name="file_rename_rename">Rename file</string>
    <string name="file_delete_dialog">Delete file</string>
    <string name="options_dialog_title">Options</string>
    <string name="action_cancel_dialog">Cancel</string>
    <string name="send_to">Send to</string>
    <string name="title_rename_dialog">Rename file</string>
    <string name="action_ok_dialog">OK</string>
    <string name="file_exists_toast">File with this name already exists</string>
    <string name="delete_file_dialog">Delete saved recording</string>
    <string name="delete_file_message_dialog">Want to delete file?</string>
    <string name="confirm_delete_dialog">OK to delete</string>
    <string name="cancel_delete_dialog">Don\'t delete</string>
    <string name="file_deleted_message">Recording was deleted</string>
    <string name="action_search">Search</string>

    <!-- RecordService -->
    <string name="file_name">Sound Recording</string>
    <string name="recording_starts">Recording Start</string>
    <string name="recording_finish">Recording Ended</string>

    <!-- Permission Dialog -->
    <string name="permission_info">I\'m sorry, but You have denied access to microphone or device storage.</string>

    <!-- Record Service-->
    <string name="recording_service_description">Service for recording audio with Speak Loud app</string>

    <string name="banner_ad">Banner Ad</string>
    <string name="saved_audio_file">Saved Audio File</string>
    <string name="audio_file_name">Audio File Name</string>
    <string name="audio_file_length">Audio File Length</string>
    <string name="audio_date_created">Audio File Creation Date</string>
    <string name="about_info">About Info</string>
    <string name="recording_confirmation">Recording Confirmation</string>
    <string name="access_denied">Access Denied</string>
    <string name="audio_progress">Audio Progress</string>
    <string name="progress_bar">Progress Bar</string>
    <string name="play_audio_button">Play Audio Button</string>
    <string name="record_audio_button">Record Audio Button</string>
    <string name="chronometer">Chronometer</string>
    <string name="new_name">New Name For Audio File</string>
    <string name="file_extension">File Extension</string>
    <string name="mp4">.mp4</string>
    <string name="file_name_mp4">file_name.mp4</string>
    <string name="_00_00">00:00</string>
    <string name="mmm_dd_yyyy_hh_mm_a">mmm dd yyyy - hh:mm a</string>
    <string name="widget">Widget</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>

</resources>
