<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_play_audio"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_vertical"
    android:orientation="vertical"
    android:padding="5dp">

...
        tools:layout_conversion_absoluteHeight="18dp"
        tools:layout_conversion_absoluteWidth="364dp"
        tools:layout_conversion_absoluteX="10dp"
        tools:layout_conversion_absoluteY="253dp" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/play_button"
        android:contentDescription="@string/play_audio_button"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="10dp"
...
