<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rename_file_dialog"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_centerHorizontal="true"
    android:orientation="horizontal"
    android:padding="20dp">

    <EditText
        android:id="@+id/new_name"
        android:hint="@string/new_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1" />

    <TextView
        android:id="@+id/textView"
        android:contentDescription="@string/file_extension"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mp4" />

</LinearLayout>